--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -2,19 +2,26 @@ name: Daily API Tests
 
 on:
   schedule:
-    - cron: '0 2 * * *'
+    - cron: '0 12 * * *'
   workflow_dispatch:
 
 jobs:
   test:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
           python-version: '3.10'
-      - run: pip install requests PyJWT
-      - run: python test_api.py
+
+      - name: Install dependencies
+        run: pip install python-dotenv requests PyJWT
+
+      - name: Run API tests
+        run: python test_api.py --log-level DEBUG
         env:
           ADMIN_USER_ID: ${{ secrets.ADMIN_USER_ID }}
           ADMIN_USER_EMAIL: ${{ secrets.ADMIN_USER_EMAIL }}
