--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -4,23 +4,40 @@ on:
   schedule:
     - cron: '0 12 * * *'
   workflow_dispatch:
+  push:
+    branches:
+      - main   # Trigger on push to main
 
 jobs:
-  test:
+  test_daily:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
-
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
-
       - name: Install dependencies
         run: pip install python-dotenv requests PyJWT
-
       - name: Run API tests
+        run: python test_api.py --log-level DEBUG
+        env:
+          ADMIN_USER_ID: ${{ secrets.ADMIN_USER_ID }}
+          ADMIN_USER_EMAIL: ${{ secrets.ADMIN_USER_EMAIL }}
+          SECRETKEY: ${{ secrets.SECRETKEY }}
+
+  test_on_push:
+    runs-on: ubuntu-latest
+    needs: test_daily   # optional: run after daily test
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+      - name: Install dependencies
+        run: pip install python-dotenv requests PyJWT
+      - name: Run API tests on main push
         run: python test_api.py --log-level DEBUG
         env:
           ADMIN_USER_ID: ${{ secrets.ADMIN_USER_ID }}
